# UniCoMTE

./: README.md  Sandia_Comlex_ECG_Implementation.ipynb  Sandia_Comlex_Implementation_Tutorial-checkpoint.ipynb  Untitled.ipynb  datasets.py  explainers.py  requirements.txt
.ipynb_checkpoints/: Sandia_Comlex_ECG_Implementation-checkpoint.ipynb  explainable_data_ECG-checkpoint.py  explainers-checkpoint.py  scratch-checkpoint.ipynb
UniCoMTE/: Full_ECG_Data_Preprocessing_Pipeline.ipynb  Sandia_Comlex_ECG_Implementation.ipynb  Sandia_Comlex_ECG_Implementation_Full_Training.ipynb
UniCoMTE/ECG_Visualization/: ECG_Visualization.ipynb
UniCoMTE/ECG_utils/: remove_flatlines.py
UniCoMTE/ECG_utils/.ipynb_checkpoints/: remove_flatlines-checkpoint.py  removing_flatlines-checkpoint.ipynb
UniCoMTE/LIME_SHAP_Comparison_Experiments/: datasets.py  explainable_data_ECG.py  explainers_benchmarking.py
UniCoMTE/LIME_SHAP_Comparison_Experiments/.ipynb_checkpoints/: ECG_SHAP_LIME_Implementation-checkpoint.ipynb  ECG_comprehensability_JL-checkpoint.ipynb  ECG_consistency-checkpoint.ipynb  ECG_consistency_JL-checkpoint.ipynb  ECG_faithfulness-checkpoint.ipynb  ECG_generalizability-checkpoint.ipynb  ECG_generalizability-task1-checkpoint.ipynb  ECG_generalizability-task2-checkpoint.ipynb  ECG_generalizability-task3-checkpoint.ipynb  (+4 more)
UniCoMTE/scripts/: batch_inference.py  create_full_kd_tree.py
comlex_core/: explainers.py  pyproject.toml  setup.cfg  usage_tutorial.py
comlex_core/src/: explainable_model.py
comlex_core/src/.ipynb_checkpoints/: explainable_data_ECG-checkpoint.py
(+20 files in other folders)
